# scanx

./: docker-compose.yml  scanx.code-workspace
api/: Dockerfile  pyproject.toml
api/scanx/: main.py
interface/: Dockerfile  next.config.ts  package-lock.json  package.json
interface/src/app/: layout.tsx  page.tsx
interface/src/components/: Fullscreen.tsx
interface/src/style/: Fullscreen.module.css  global.css
